[package]
name = "did-i-github-today"
version = "0.1.0"
edition = "2018"
authors = ["Phil <PhilboBaggins@users.noreply.github.com>"]
description = "A command line application to tell you if you've done anything on Github today"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PhilboBaggins/did-i-github-today"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
json = "0.12.4"
serde = { version = "1.0.195", features = ["derive"] }
ureq = { version = "2.9.1", features = ["json"] }
chrono = "0.4.32"
